[package]
name = "terri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.25.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros"] }
nacl = "0.5.3"
hex = "0.4.3"
serde = "1.0.138"
serde_json = "1.0"